# Containarium

./: .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION-PLAN.md  Makefile  README.md  SECURITY-CHECKLIST.md  SECURITY.md  buf.gen.yaml  go.mod  go.sum
.github/: RELEASE_TEMPLATE.md  dependabot.yml
.github/workflows/: agent-box-image.yml  distros-go-ci.yml  distros-py-ci.yml  distros-py-release.yml  golangci-lint.yml  k8s-e2e.yml  proxyproto-e2e.yml  release-mcp.yml  release.yml  security.yml  sidecars.yml  sshpiper-image.yml
agent-runtime/: README.md
agent-runtime/src/: a2a.ts  index.ts  poll.ts
api/swagger/: containarium.swagger.json
charts/containarium-k8s/: values.yaml
cmd/agent-box/: main.go
cmd/containarium/: main.go
cmd/ebpf-phaseA/: main.go
cmd/mcp-server/: README.md  main.go
cmd/model-gateway/: README.md  main.go
cmd/netpolicy-smoke/: main.go
configs/: stacks.yaml
deployments/core/: docker-compose.yml
deployments/production/: docker-compose.yml  nginx.conf
distros/py/: pyproject.toml
distros/py/src/containarium_telemetry/: _init.py
distros/py/tests/: test_init_traces.py
docs/: AGENT-MODEL-GATEWAY-DESIGN.md  AGENT-RUNTIME-INBOX-LOOP-DESIGN.md  AGENT-SKILLS-CREWS-DESIGN.md  AGENT-SKILLS-QUICKSTART.md  API-SERVICE-DESIGN.md  APP-HOSTING-SUMMARY.md  APP-HOSTING.md  BUILDPACKS.md  BYOC-PUBLIC-INGRESS-DESIGN.md  CADDY-SETUP.md  CLOUD-ACTUATION-SMOKE.md  CLOUD-NATIVE-METRICS-EXPORT-DESIGN.md  CLOUD-NATIVE-METRICS-EXPORT.md  CONTAINARIUM-HOST-TO-VM-MIGRATION.md  CUTOVER-DEMO-INTO-PROD-SENTINEL.md  DB-BACKUP-OPERATIONS.md  DEPLOYMENT-GUIDE.md  DISASTER-RECOVERY.md  EGRESS-FANOUT-DETECTION.md  EGRESS-VIA-CLIENT-DESIGN.md  EPHEMERAL-SANDBOX-DESIGN.md  HORIZONTAL-SCALING-ARCHITECTURE.md  HORIZONTAL-SCALING-QUICKSTART.md  ISO27001-COMPLIANCE.md  K8S-AGENT-BOX-RUNTIME-DESIGN.md  KUBEFLOW-SETUP.md  MCP-60-SECONDS.md  MCP-PROTOBUF-CONTRACT.md  METRICS-EXPORT-DEADMAN-ALERT-RUNBOOK.md  MULTI-BACKEND-PEERS.md  MULTI-POOL.md  NODE-VM-PROVISIONING.md  OTEL-AGENT-RELAY-DESIGN.md  OTEL-COLLECTOR-DESIGN.md  PER-POOL-BASE-DOMAIN.md  PLATFORM-SIDECAR-DESIGN.md  PODMAN-REBOOT-DURABILITY.md  PROXY-PROTOCOL.md  RELEASE-PROCESS.md  REST-API-QUICKSTART.md  (+12 more)
docs/demos/: agent-box-gateway-demo.sh
docs/integrations/: llama-cpp.md  ollama.md
docs/security/: KERNEL-PATCH-RUNBOOK.md  KMS-BROKER-DESIGN.md  NETWORK-ISOLATION-DESIGN.md  OPERATOR-SECURITY-RUNBOOK.md  SECURITY-FAQ.md  VIRTUAL-PATCHING-TIER2.md  ZERO-TRUST-AUDIT.md  ZERO-TRUST-TODO.md
experimental/ebpf-phaseA/: .gitignore  README.md  netpolicy.bpf.c  sigscan-proto.bpf.c  validate-signature-scan.sh
hacks/: README.md  fix-incus-conflict.sh  install.sh  uninstall.sh
hacks/repro/: README.md  cloud-init.yaml  multipass-up.sh  sshpiper-reload-301.sh
hacks/runner/: README.md  install.sh
images/agent-box/: Dockerfile
images/mcp-server/: Dockerfile
images/sshpiper/: Dockerfile  entrypoint.sh
internal/agentbox/: agentbox_test.go  compose.go  compose_cli.go  compose_cli_test.go  compose_test.go  files.go  process.go  resources.go  resources_test.go  sandbox.go  server.go  tail_log.go
internal/alert/: manager.go
internal/app/: builder.go  caddy_dns01_test.go  caddy_types.go  daemon_config_store.go  l4_proxy.go  l4_proxy_test.go  manager.go  proxy.go  proxy_test.go  route_store.go  route_sync.go  store.go  store_interface.go  store_test.go
internal/audit/: ssh_collector.go  store.go
internal/auth/: abuse_test.go  alg_pinning_test.go  authz.go  authz_test.go  middleware.go  middleware_test.go  revocation.go  revocation_store.go  revocation_test.go  scopes.go  scopes_test.go  sentinel_hmac.go  sentinel_hmac_test.go  token.go  token_hardening_test.go  token_test.go  ws_token.go  ws_token_test.go
internal/autosleep/: manager_test.go
internal/client/: client.go  grpc.go  http.go  http_test.go
internal/cloud/: client.go  client_test.go  config.go  config_test.go  resolve_driver_secret_test.go  token.go
internal/cmd/: agent.go  agent_call.go  agent_enqueue.go  agent_get.go  agent_list.go  agent_run.go  agent_worker.go  app.go  app_delete.go  app_deploy.go  app_get.go  app_lifecycle.go  app_list.go  app_logs.go  audit.go  audit_test.go  backends_list.go  backends_upgrade.go  backends_validate_gpu.go  backends_versions.go  backends_versions_test.go  backup.go  backup_create.go  backup_delete.go  backup_get.go  backup_list.go  backup_restore.go  cert.go  cloud.go  (+90 more)
scripts/: build-webui.sh  containarium.service  deploy-binary.sh  download-swagger-ui.sh  install-agent-runtime.sh  install-lab-phase-b.sh  install-lab-tunnel.sh  k8s-sentinel-e2e.sh  lab-cors-override.conf  setup-caddy.sh  setup-gpu-host.sh  setup-peer.sh  setup-ssh-container-proxy.sh  validate-gpu-passthrough.sh
test/: mock-server.py
web-ui/: Dockerfile  next.config.ts  package-lock.json  package.json
(+644 files in other folders)
