[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "containarium-telemetry"
version = "0.21.0"
description = "Containarium telemetry distro for Python — opinionated OpenTelemetry init that pairs with the Containarium platform's monitoring infrastructure."
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "FootprintAI" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    # Required for ContainariumDistro / Configurator entry points and
    # the auto-instrumentation runtime used by `containarium-instrument`.
    "opentelemetry-instrumentation>=0.48b0",
]

[project.urls]
Homepage = "https://github.com/footprintai/containarium"
Documentation = "https://github.com/footprintai/containarium/blob/main/docs/TELEMETRY-DISTRO-DESIGN.md"
Repository = "https://github.com/footprintai/containarium"
Issues = "https://github.com/footprintai/containarium/issues"

# Per-framework extras pull in the upstream OTel instrumentation package
# for that framework. The instrumentation packages themselves declare
# the framework as a transitive dep, so e.g. `pip install
# containarium-telemetry[flask]` installs flask too. Tenants who already
# pin their framework get no version conflict because the OTel
# instrumentation packages declare ranges, not pins.
[project.optional-dependencies]
flask = ["opentelemetry-instrumentation-flask>=0.48b0"]
fastapi = ["opentelemetry-instrumentation-fastapi>=0.48b0"]
django = ["opentelemetry-instrumentation-django>=0.48b0"]
requests = ["opentelemetry-instrumentation-requests>=0.48b0"]
httpx = ["opentelemetry-instrumentation-httpx>=0.48b0"]
sqlalchemy = ["opentelemetry-instrumentation-sqlalchemy>=0.48b0"]
asyncpg = ["opentelemetry-instrumentation-asyncpg>=0.48b0"]
psycopg = ["opentelemetry-instrumentation-psycopg>=0.48b0"]
redis = ["opentelemetry-instrumentation-redis>=0.48b0"]
logging = ["opentelemetry-instrumentation-logging>=0.48b0"]
# `grpc` adds the OTLP gRPC exporter, for collectors that listen on OTLP
# gRPC :4317 instead of HTTP :4318. Selected at runtime via
# OTEL_EXPORTER_OTLP_PROTOCOL=grpc (#386). The HTTP exporter is a core
# dependency, so the default transport needs no extra.
grpc = ["opentelemetry-exporter-otlp-proto-grpc>=1.27.0"]
# `all` is the convenience bundle — recommended default for greenfield
# apps. Tenants with image-size sensitivity pin individual extras.
all = [
    "opentelemetry-instrumentation-flask>=0.48b0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-django>=0.48b0",
    "opentelemetry-instrumentation-requests>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0",
    "opentelemetry-instrumentation-psycopg>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    # Used by integration tests for the instrumentor auto-discovery path.
    "flask>=2.0",
    "opentelemetry-instrumentation-flask>=0.48b0",
    # So the test suite can exercise the OTLP gRPC exporter path (#386).
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
]

# `containarium-instrument` is always installed (D8) — it's a console
# script alias over `opentelemetry-instrument` that adds --dry-run +
# branding.
[project.scripts]
containarium-instrument = "containarium_telemetry._exec_shim:main"

# Entry points the OTel auto-instrumentation runtime discovers. When
# `opentelemetry-instrument` (or our `containarium-instrument` alias)
# runs, it loads our Distro + Configurator so that the init we run via
# direct API call also runs via the auto-instrument path.
[project.entry-points."opentelemetry_distro"]
containarium = "containarium_telemetry._distro:ContainariumDistro"

[project.entry-points."opentelemetry_configurator"]
containarium = "containarium_telemetry._distro:ContainariumConfigurator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
containarium_telemetry = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
